# TransCoder

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  MANIFEST.in  PERFORMANCE_METRICS_SUMMARY.md  README.md  README_CN.md  app.py  config.py  env.example  install_service.sh  make_executable.bat  make_executable.sh  pyproject.toml  quick_start.sh  requirements-minimal.txt  requirements.txt  run.py  setup.sh  test_clean_translation.py  test_environment.py  test_performance_metrics.py  test_quick_reflection.py  test_reflection_modes.py  upload_pypi.bat  upload_pypi.sh
services/: evaluation_service.py  terminology_service.py  translation_service.py  vector_db_service.py
static/css/: style.css
static/js/: app.js  terminology.js  vector_db.js
templates/: index.html  terminology.html  vector_db.html
tests/: test_api.py
transcoder/: __init__.py  __main__.py  api.py  app.py  cli.py  core.py  providers.py
utils/: file_handler.py
