[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcoder-llm"
version = "1.0.0"
description = "Multilingual Parallel Translation Platform with Reflection-based Improvement using Local LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TransCoder Team", email = "transcoder@example.com"}
]
maintainers = [
    {name = "TransCoder Team", email = "transcoder@example.com"}
]
keywords = [
    "translation",
    "llm",
    "ollama",
    "multilingual",
    "reflection",
    "ai",
    "machine-translation",
    "nlp",
    "local-llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "langdetect>=1.0.0",
    "python-dotenv>=1.0.0",
    "waitress>=2.1.0",
]

[project.optional-dependencies]
web = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "waitress>=2.1.0",
]
vector-db = [
    "numpy>=1.20.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
]
evaluation = [
    "sacrebleu>=2.0.0",
    "bert-score>=0.3.0",
    "rouge-score>=0.1.0",
    "nltk>=3.8.0",
]
terminology = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]
gui = [
    "PySide6>=6.4.0",
]
all = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "ollama>=0.1.0",
    "openai>=1.0.0",
    "langdetect>=1.0.0",
    "python-dotenv>=1.0.0",
    "waitress>=2.1.0",
    "numpy>=1.20.0",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "sacrebleu>=2.0.0",
    "bert-score>=0.3.0",
    "rouge-score>=0.1.0",
    "nltk>=3.8.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "PySide6>=6.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
transcoder = "transcoder.cli:main"

[project.gui-scripts]
transcoder-gui = "transcoder.cli:launch_gui"

[project.urls]
Homepage = "https://github.com/EasyCam/TransCoder"
Documentation = "https://github.com/EasyCam/TransCoder#readme"
Repository = "https://github.com/EasyCam/TransCoder.git"
Issues = "https://github.com/EasyCam/TransCoder/issues"
Changelog = "https://github.com/EasyCam/TransCoder/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["transcoder"]
include-package-data = true

[tool.setuptools.package-data]
transcoder = ["templates/**/*", "static/**/*"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["transcoder"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]